Mise a jour code refait a la main